--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -1,3 +1,6 @@
+<%- title "Apply to TECHRISE | TECHRISE - IT Coding Bootcamp in Nepal" %>
+<%- og_title "Apply to TECHRISE | TECHRISE - IT Coding Bootcamp in Nepal" %>
+
 <div class = "row">
   <div class = "col-xs-12 col-md-7">
     <h1 class="text-center">Start Your Coding Career</h1>
