--- a/app/views/static_pages/about.html.erb
+++ b/app/views/static_pages/about.html.erb
@@ -1,4 +1,5 @@
 <% title("About | TECHRISE - Coding Bootcamp in Nepal") %>
+<% og_title("About | TECHRISE - Coding Bootcamp in Nepal") %>
 
 <div class="headline-bg about-headline-bg">
 </div><!--//headline-bg-->   
