--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -1,3 +1,7 @@
+<% og_title("Pricing | TECHRISE - Coding Bootcamp in Nepal") %>
+<% title("Pricing | TECHRISE - Coding Bootcamp in Nepal") %>
+
+
 <div class="headline-bg pricing-headline-bg">
 </div><!--//headline-bg-->
 
