--- a/app/views/static_pages/learn.html.erb
+++ b/app/views/static_pages/learn.html.erb
@@ -1,4 +1,5 @@
-<% title("Learn | TECHRISE - Coding Bootcamp in Nepal") %>
+<% og_title("How it Works | TECHRISE - Coding Bootcamp in Nepal") %>
+<% title("How it Works | TECHRISE - Coding Bootcamp in Nepal") %>
 
 <div class="headline-bg">
 </div><!--//headline-bg-->         
