--- a/app/assets/stylesheets/master.css.scss
+++ b/app/assets/stylesheets/master.css.scss
@@ -1,3 +1,9 @@
+.btn-facebook {
+  background: #3b5998;
+  border: 2px solid #3b5998;
+  color: #fff;
+}
+
 .techrise_list {
   list-style-type: none;
   li {
