--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -114,6 +114,10 @@
                             <li>
                               <a href="/about">About</a>
                             </li>
+
+                            <li>
+                              <a href="/events">Events</a>
+                            </li>
                         </ul>
                     </li>
 
