--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -42,7 +42,7 @@
             <%= link_to 'Facebook Event', @event.facebook_link, class: 'btn btn-block btn-facebook' %>
           </li>
           <li>
-            <%= link_to 'Sign Up For Event', @event.signup_link, class: 'btn btn-cta-primary btn-block' %>
+            <%= link_to 'Register For Event', @event.signup_link, class: 'btn btn-cta-primary btn-block' %>
           </li>
         </ul>
       </div><!-- panel-body -->
