add feedback feature

--- a/app/views/application/_selection.html.erb
+++ b/app/views/application/_selection.html.erb
@@ -81,7 +81,7 @@ $(document).on("click", ".openFeedback", function () {
 </button>
 
 <ul class="selText">
-    <a data-toggle="modal" title="Send Feedback" class="openFeedback btn btn-primary" href="#myModal">Test</a>
+    <a data-toggle="modal" title="Send Feedback" class="openFeedback btn btn-primary" href="#myModal"><i class="fa fa-envelope" aria-hidden="true"></i></a>
 </ul>
 
 <%= current_user.id %>
