--- a/app/views/feedbacks/show.html.erb
+++ b/app/views/feedbacks/show.html.erb
@@ -15,6 +15,8 @@
     </div>
 
     <div class="col-xs-12 col-sm-10">
+      <h4><%= @feedback.course_name %></h2>
+      <h4><%= @feedback.lesson_id %></h2>
       <h3><%= @feedback.title %></h3>
       <small><%= display_date(@feedback.created_at) %></small>
       <br>
