--- a/app/assets/stylesheets/selection.css
+++ b/app/assets/stylesheets/selection.css
@@ -2,10 +2,10 @@
 ul.selText {
     display: none;
     list-style: none;
-    box-shadow: 0px 0px 4px rgba(0,0,0,.5);
+    /*box-shadow: 0px 0px 4px rgba(?0,0,0,.5);*/
     border: solid 1px #000;
     position: absolute;
-    background: #eee;
+    /*background: #eee;*/
     color: black;
     padding-left: initial;
 }
