--- a/app/views/static_pages/index.html.erb
+++ b/app/views/static_pages/index.html.erb
@@ -242,7 +242,7 @@
                             I am a BSC.CS.IT student. <strong>I love programming, and always thought of becoming a programmer.</strong> But there was a problem whenever I try to learn something new by myself, it was like I was missing something. <strong>When I got stuck there was no one to help me.</strong> I could search it on internet but the problem was I could not get all what I want. After I joined TECHRISE <strong>I am learning about new things everyday.</strong> It's a new experience integrating new technologies. I am really happy that I am with safe hands. <strong>Thank you TECHRISE for fulfilling my dream to be a good programmer.</strong>
                           </p>
                           </blockquote>
-                          <p class="source">Aashik Yadav<br /><span class="title">Current Student at TECHRISE</span></p>
+                          <p class="source">Rabin Gaire<br /><span class="title">Current Student at TECHRISE</span></p>
                       </div><!--//content-->                         
                   </div><!--//item-->  
 
