--- a/app/views/mvc_lessons/lessons/lesson_2.html.erb
+++ b/app/views/mvc_lessons/lessons/lesson_2.html.erb
@@ -18,7 +18,7 @@
   <li><strong>A user makes an HTTP request</strong></li>
   <ul>
     <li>An HTTP request is basically a user saying, "Hey, I'm going to try to access this URL."</li>
-    <li>In other words, when you vist a web page, you are making an HTTP request</li>
+    <li>In other words, when you visit a web page, you are making an HTTP request</li>
   </ul>
   <li><strong>The request passes through the Rails Router</strong></li>
   <ul>
@@ -41,7 +41,7 @@ edit_idea GET    /ideas/:id/edit(.:format) ideas#edit
   <li><strong>The controller receives the request</strong></li>
   <ul>
     <li>Often times parameters are passed into the controller. We can access these parameters using <code>params</code> .</li>
-    <li>For example, you can use <code>params[:id]</code> to access the <code>id</code> parameter.</li>
+    <li>For example, you can use <code>params[:id]</code> to access the <code>id</code> parameter</li>
   </ul>
   <li><strong>If the controller has some code that makes a call to the model, the model receives the request to do the job</strong></li>
   <ul>
