--- a/app/views/ideator_lessons/lessons/lesson_11.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_11.html.erb
@@ -32,6 +32,7 @@
         &lt;p&gt;&lt;%= idea.description %&gt;&lt;/p&gt;
         &lt;small&gt;by &lt;%= idea.author %&gt;&lt;/small&gt;
       &lt;/blockquote&gt; 
+    &lt;/div&gt;
   &lt;/div&gt;
 &lt;% end %&gt;
 </code></pre>
