--- a/app/views/instapost_lessons/lessons/lesson_1.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_1.html.erb
@@ -22,7 +22,7 @@ cd ~/desktop
 </code></pre>
 
 <p>
-  This is where we’ll create our ideator app. In the terminal that we just opened up, let’s type in the following command.
+  This is where we’ll create our Instapost app. In the terminal that we just opened up, let’s type in the following command.
 </p>
 
 
