--- a/app/views/ideator_lessons/lessons/lesson_12.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_12.html.erb
@@ -314,7 +314,7 @@ edit_idea GET    /ideas/:id/edit(.:format) ideas#edit
   </p>
 
   <p>
-    When you add <code>resouces :controller_name</code> to <code>routes.rb</code>, it automatically creates routes for the following actions that we talked about above:
+    When you add <code>resources :controller_name</code> to <code>routes.rb</code>, it automatically creates routes for the following actions that we talked about above:
   </p>
 
   <ul>
