--- a/app/views/ideator_lessons/lessons/lesson_22.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_22.html.erb
@@ -28,8 +28,8 @@
 </p>
 
 <ol>
-  <li><%= link_to 'https://devcenter.heroku.com/articles/sqlite3#running-rails-on-postgres' %></li>
-  <li><%= link_to 'https://devcenter.heroku.com/articles/git#creating-a-heroku-remote' %></li>
+  <li><%= link_to 'https://devcenter.heroku.com/articles/sqlite3#running-rails-on-postgres', 'https://devcenter.heroku.com/articles/sqlite3#running-rails-on-postgres' %></li>
+  <li><%= link_to 'https://devcenter.heroku.com/articles/git#creating-a-heroku-remote', 'https://devcenter.heroku.com/articles/git#creating-a-heroku-remote' %></li>
 </ol>
 
 <% @submission_form = true %>
