--- a/app/views/instapost_lessons/lessons/lesson_17.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_17.html.erb
@@ -11,7 +11,7 @@
 <%= create_flashcard %>
 
 <p>
-  Let's go ahead and implement a <code>before_action</code> filter in our app. What we want to do is to check if the post is owned by the <code>current_user</code>, and if so, we want to redirect them to the <code>root_path</code> so they can't access the <code>edit</code> page.
+  Let's go ahead and implement a <code>before_action</code> filter in our app. What we want to do is to check if the post is owned by the <code>current_user</code>, and if it isn't, we want to redirect them to the <code>root_path</code> so they can't access the <code>edit</code> page.
 </p>
 
 <p>
