--- a/app/views/static_pages/_details.html.erb
+++ b/app/views/static_pages/_details.html.erb
@@ -16,7 +16,7 @@
             <tr>
                 <td><strong>Price</strong></td>
                 <td>    
-                    20,000 NPR for 2 months. Read more <%= link_to 'here', pricing_path %>.
+                    <strike>20,000</strike> <strong>15,000 NPR</strong> for 2 months (limited time offer). Read more <%= link_to 'here', pricing_path %>.
                 </td>
             </tr>
             <tr>
