--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -18,7 +18,7 @@
                     <div class="item-inner">
                         <div class="heading">
                         <h3 class="title">TECHRISE CORE PROGRAM</h3>
-                            <p class="price-figure"><span class="price-figure-inner"><span class="currency"></span><span class="number">20,000</span><br /><span class="unit">NPR</span></span></p>
+                            <p class="price-figure"><span class="price-figure-inner"><span class="currency"></span><span class="number">15,000</span> <strike>20,000</strike>(limited time offer)<br /><span class="unit">NPR</span></span></p>
                         </div>
                         <div class="content">
                             <ul class="list-unstyled feature-list">
