--- a/app/views/html_css_lessons/lessons/lesson_1.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_1.html.erb
@@ -5,7 +5,7 @@
 </p>
 
 <ul>
-	<li><strong>Don't copy and paste</strong> - it is always better to actually type the code yourself. <strong>Msucle memory</strong> is really important when learning how to code!</li>
+	<li><strong>Don't copy and paste</strong> - it is always better to actually type the code yourself. <strong>Muscle memory</strong> is really important when learning how to code!</li>
 	<li><strong>Ask Questions</strong> - whenever something doesn't make sense to you, first google, then ask for help! We are always here to help out.</li>
 	<li><strong>Don't be frustrated</strong> - some of these lessons might be difficult for you, but don't be frustrated, it's part of learning and it is important to relax and keep on going.</li>
 </ul>
