--- a/app/views/html_css_lessons/lessons/lesson_3.html.erb
+++ b/app/views/html_css_lessons/lessons/lesson_3.html.erb
@@ -30,7 +30,7 @@
 <h3>Google Chrome</h3>
 
 <p>
-  The next thing you need to download is Google Chrome. Google Chrome is a popular web browser amongst web developers. This is because it comes with a tool called Google Developer Tools. Google Developer Tools enables you to do things like typing in JavaScript code and seeing if it works, changing HTML or CSS code inside the browser, and other things that we are useful developing websites.
+  The next thing you need to download is Google Chrome. Google Chrome is a popular web browser amongst web developers. This is because it comes with a tool called Google Developer Tools. Google Developer Tools enables you to do things like typing in JavaScript code and seeing if it works, changing HTML or CSS code inside the browser, and other things that are useful when developing websites.
 </p>
 
 <p>
