--- a/app/views/instapost_lessons/lessons/lesson_28.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_28.html.erb
@@ -17,7 +17,7 @@ rails g controller users
 </p>
 
 <pre><code class="ruby">
-routes :users, only: :show
+resources :users, only: :show
 </code></pre>
 
 <p>
