--- a/app/views/instapost_lessons/lessons/lesson_28.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_28.html.erb
@@ -21,11 +21,11 @@ resources :users, only: :show
 </code></pre>
 
 <p>
-  Let's go ahead and create our <code>show.html.erb</code> in our <code>app/views/posts</code>. This is going to be our profile page for users.
+  Let's go ahead and create our <code>show.html.erb</code> in our <code>app/views/users</code>. This is going to be our profile page for users.
 </p>
 
 <p>
-  In our <code>posts_controller.rb</code>, let's add in the <code>show</code> method:
+  In our <code>users_controller.rb</code>, let's add in the <code>show</code> method:
 </p>
 
 <pre><code class="ruby">
