--- a/app/views/command_line_lessons/lessons/lesson_1.html.erb
+++ b/app/views/command_line_lessons/lessons/lesson_1.html.erb
@@ -199,7 +199,7 @@ cd ~/desktop
 </code></pre>
 
 <p>
-  Let's create a new folder on our desktop. We can do this with the <code>mkdir</code> command. <code>mkdir</code> stands for <strong>make directory</strong>. Developers use this command when they want to make a new folder in the urrent directory.
+  Let's create a new folder on our desktop. We can do this with the <code>mkdir</code> command. <code>mkdir</code> stands for <strong>make directory</strong>. Developers use this command when they want to make a new folder in the current directory.
 
 </p>
 
@@ -242,7 +242,7 @@ cd techrise_folder
 </code></pre>
 
 <p>
-  Let's make a new folder called <strong>folder_1</strong>. In the terminal, type in tthe following and press enter:
+  Let's make a new folder called <strong>folder_1</strong>. In the terminal, type in the following and press enter:
 </p>
 
 <pre><code class="bash">
