--- a/app/views/ideator_lessons/lessons/lesson_14.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_14.html.erb
@@ -5,7 +5,11 @@
 </p>
 
 <p>
-  First, let's go into <code>ideas_controller.rb</code>. Inside the file, let's add an <code>edit</code> method. In <code>ideas_controller.rb</code>, add the following code under your <code>create</code> method.
+  First, let's go into <code>ideas_controller.rb</code>. Inside the file, let's add an <code>edit</code> method. In <code>ideas_controller.rb</code>, add the following code <strong>right under your <code>create</code> method</strong>.
+</p>
+
+<p class="alert">
+  Make sure you don't put it under <code>private</code>. Code written under <code>private</code> will make the code private, meaning that they won't be accessible outside of the class.
 </p>
 
 <pre><code class="ruby">
