change prework time and refactor

--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -8,13 +8,13 @@
     <hr>
 
     <p>
-      With our <strong>FREE 2 week pre-work course</strong>, you'll learn the basics of HTML and CSS to get your web development career started at TECHRISE.
+      With our <strong>FREE pre-work course</strong>, you'll learn the basics of HTML and CSS to get your web development career started at TECHRISE.
     </p>
 
     <br>
 
     <div class="step text-center col-md-4 col-sm-4 col-xs-12">
-       <h3 class="title"><span class="number">1</span><br /><span class="text">Complete our 2 week Pre-work Course</span></h3>
+       <h3 class="title"><span class="number">1</span><br /><span class="text">Complete our Pre-work Course</span></h3>
        
     </div><!--//step-->
     <div class="step text-center col-md-4 col-sm-4 col-xs-12">
