--- a/app/views/static_pages/_timeline.html.erb
+++ b/app/views/static_pages/_timeline.html.erb
@@ -14,7 +14,7 @@
                         <dt class="timeline-event" id="event02"><a>HTML/CSS</a></dt>
                         <dd class="timeline-event-content" id="event02EX">
                                 <p>
-                                  During the 2 week pre-work period, you will learn the basics of HTML and CSS. You do not need any prior experience with programming to complete these assignments. The pre-work is completely free, and TECHRISE Mentors will be there to support you at any time.
+                                  During the pre-work period, you will learn the basics of HTML and CSS. You do not need any prior experience with programming to complete these assignments. The pre-work is completely free, and TECHRISE Mentors will be there to support you at any time.
                                 </p>
                         </dd>
 
