--- a/app/views/static_pages/curriculum.html.erb
+++ b/app/views/static_pages/curriculum.html.erb
@@ -40,7 +40,7 @@
              </div><!--//step-->
              <div class="step text-center col-md-4 col-sm-4 col-xs-12">
                  <h3 class="title"><span class="number">2</span><br /><span class="text">Complete Prework</span></h3>
-                 <p>Once you sign up, you will have 2 weeks to complete a series of assignments. You will learn the basics of HTML and CSS. If you complete all of these assignments in 2 weeks, you will be called in for an admission interview.</p>
+                 <p>Once you sign up, you will have 4 days to complete a series of assignments. You will learn the basics of HTML and CSS. If you complete all of these assignments on time, you will be called in for an admission interview.</p>
              </div><!--//step-->
              <div class="step text-center col-md-4 col-sm-4 col-xs-12">
                  <h3 class="title"><span class="number">3</span><br /><span class="text">Start Your Coding Career</span></h3>
