--- a/app/views/static_pages/pricing.html.erb
+++ b/app/views/static_pages/pricing.html.erb
@@ -28,7 +28,7 @@
                                 <li><i class="fa fa-check"></i>Online Support</li>                                
                                 <li><i class="fa fa-check"></i>Lifetime Access to Course Material</li>
                             </ul>
-                            <%= link_to 'Start 2 Week Pre-work Assignments', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %>
+                            <%= link_to 'Start Pre-work Assignments', new_user_registration_path, class: 'btn btn-cta btn-cta-primary' %>
                         </div><!--//content-->
                         
                     </div><!--//item-inner-->
@@ -132,7 +132,7 @@
         
                     <div class="panel-collapse collapse" id="faq7">
                         <div class="panel-body">
-                            You can apply here online. You will have 2 weeks to finish a series of pre-work assignments to be admitted to TECHRISE.
+                            You can apply here online. You will have 4 days to finish a series of pre-work assignments to be admitted into TECHRISE.
                         </div>
                     </div>
                 </div><!--//panel-->
