--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -4,7 +4,7 @@
 
 <% if @last_lesson %>
 
-  <% lesson_name = Tags::LESSONS[@last_lesson.parameters[:course_name].underscore + "s"].keys[@last_lesson.parameters[:lesson_id].to_i - 1][1] %>
+  <% lesson_name = get_lesson_name(@last_course_name, @last_lesson_id) %>
 
   <div class="row">
 		  <div class="col-xs-12">
@@ -17,8 +17,8 @@
 		          <div class="row">
 		            <div class="col-sm-4 col-xs-12">
 		              <div class="lesson_well">
-		                <small>Lesson <%= @last_lesson.parameters[:lesson_id] %></small>
-		                <h4 style="margin-top: 0px;"><%= @last_lesson.parameters[:course_name].split(/(?=[A-Z])/).join(" ").chomp("Lesson") %></h4>
+		                <small>Lesson <%= @last_lesson_id %></small>
+		                <h4 style="margin-top: 0px;"><%= @last_course_name.split(/(?=[A-Z])/).join(" ").chomp("Lesson") %></h4>
 		              </div>
 		            </div>
 
@@ -32,8 +32,8 @@
 		            <div class="col-xs-12">
 		              <div class="progress_bar" style="border-top: none;">
 		                <div class="progress">
-		                  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="<%= progress(@last_lesson.parameters[:course_name]) %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress(@last_lesson.parameters[:course_name]) %>%; min-width: 4em;">
-		                    <%= progress(@last_lesson.parameters[:course_name]) %>% completed
+		                  <div class="progress-bar progress-bar-info" role="progressbar" aria-valuenow="<%= progress(@last_course_name) %>" aria-valuemin="0" aria-valuemax="100" style="width: <%= progress(@last_course_name) %>%; min-width: 4em;">
+		                    <%= progress(@last_course_name) %>% completed
 		                  </div>
 		                </div>
 		              </div><!-- progress_bar -->
@@ -43,7 +43,7 @@
 
 		          <div class="row" style="margin-top:20px;">
 		            <div class="col-xs-12">
-		              <h3><%= link_to 'Continue Lesson <i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i>'.html_safe, '/' + @last_lesson.parameters[:course_name].underscore + "s/" + @last_lesson.parameters[:lesson_id], class: 'btn btn-danger' %></h3>
+		              <h3><%= link_to 'Continue Lesson <i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i>'.html_safe, '/' + get_lesson_url_string(@last_course_name, @last_lesson_id), class: 'btn btn-danger' %></h3>
 		            </div>
 		          </div><!-- row -->
 		        </div><!-- col-xs-12 col-md-6 col-md-offset-3 -->
