--- a/app/assets/stylesheets/selection.css
+++ b/app/assets/stylesheets/selection.css
@@ -3,7 +3,7 @@ ul.selText {
     display: none;
     list-style: none;
     /*box-shadow: 0px 0px 4px rgba(?0,0,0,.5);*/
-    border: solid 1px #000;
+    /*border: solid 1px #000;*/
     position: absolute;
     /*background: #eee;*/
     color: black;
@@ -21,4 +21,8 @@ ul.selText li {
     cursor: pointer;
     text-align:justify;
     /*vertical-align: center;*/
+}
+
+i.fa.fa-comment.bcolor {
+    color: black;
 }
