--- a/app/views/static_pages/courses.html.erb
+++ b/app/views/static_pages/courses.html.erb
@@ -43,7 +43,7 @@
 
 		          <div class="row" style="margin-top:20px;">
 		            <div class="col-xs-12">
-		              <h3><%= link_to 'Continue Lesson <i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i>'.html_safe, '/' + get_lesson_url_string(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]), class: 'btn btn-danger' %></h3>
+		              <h3><%= link_to 'Continue Lesson <i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i>'.html_safe, get_lesson_url_string(@last_lesson.parameters[:course_name], @last_lesson.parameters[:lesson_id]), class: 'btn btn-danger' %></h3>
 		            </div>
 		          </div><!-- row -->
 		        </div><!-- col-xs-12 col-md-6 col-md-offset-3 -->
