add prework finished email

--- a/app/views/layouts/mailer.html.erb
+++ b/app/views/layouts/mailer.html.erb
@@ -23,7 +23,7 @@
               }
 
               .body-border {
-                border-top: 8px solid #1e1e1e;
+                border-top: 8px solid #34495E;
               }
 
             </style>
@@ -57,15 +57,16 @@
 
                                   <%= yield %>
 
-                                  <center data-parsed="">
+                                  <center data-parsed="" style="background:#34495E">
                                   <table class="menu float-center" align="center">
                                     <tr>
                                       <td>
                                         <table>
                                           <tr>
-                                            <th class="menu-item float-center"><a href="http://www.techrise.me">TECHRISE</a></th>
-                                            <th class="menu-item float-center"><a href="https://www.facebook.com/techrisenepal">Facebook</a></th>
-                                            <th class="menu-item float-center"><a href="https://www.linkedin.com/company/techrise">LinkedIn</a></th>
+                                            <th class="menu-item float-center"><a href="http://www.techrise.me" target="_blank" style="color: white">TECHRISE</a></th>
+                                            <th class="menu-item float-center"><a href="https://www.facebook.com/techrisenepal" target="_blank" style="color: white">Facebook</a></th>
+                                            <th class="menu-item float-center" style="color: white"><a href="https://www.twitter.com/techrisenepal" target="_blank" style="color: white">Twitter</a></th>
+                                            <th class="menu-item float-center"><a href="https://www.linkedin.com/company/techrise" target="_blank" style="color: white">LinkedIn</a></th>
                                           </tr>
                                         </table>
                                       </td>
