--- a/app/views/ideator_lessons/lessons/lesson_8.html.erb
+++ b/app/views/ideator_lessons/lessons/lesson_8.html.erb
@@ -49,29 +49,15 @@ body {
 &lt;!-- HTML code above --&gt;
 
 &lt;div id = "wrap"&gt;
-  &lt;nav class="navbar navbar-default"&gt;
-    &lt;div class="container-fluid"&gt;
-      &lt;!-- Brand and toggle get grouped for better mobile display --&gt;
-      &lt;div class="navbar-header"&gt;
-        &lt;button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"&gt;
-          &lt;span class="sr-only"&gt;Toggle navigation&lt;/span&gt;
-          &lt;span class="icon-bar"&gt;&lt;/span&gt;
-          &lt;span class="icon-bar"&gt;&lt;/span&gt;
-          &lt;span class="icon-bar"&gt;&lt;/span&gt;
-        &lt;/button&gt;
-        &lt;a class="navbar-brand" href="/" style="color: #337AB7;"&gt;Ideator&lt;/a&gt;
-      &lt;/div&gt;
-
-      &lt;!-- Collect the nav links, forms, and other content for toggling --&gt;
-      &lt;div class="collapse navbar-collapse" id="bs-example-navbar-collapse-1"&gt;
-        &lt;ul class="nav navbar-nav navbar-right"&gt;
-          &lt;li&gt;&lt;%= link_to 'All Ideas', root_path %&gt;&lt;/li&gt;
-          &lt;li&gt;&lt;%= link_to 'Inspire Me', random_path %&gt;&lt;/li&gt;
-          &lt;li&gt;&lt;%= link_to 'About', about_path %&gt;&lt;/li&gt;
-        &lt;/ul&gt;
-      &lt;/div&gt;&lt;!-- /.navbar-collapse --&gt;
-    &lt;/div&gt;&lt;!-- /.container-fluid --&gt;
-  &lt;/nav&gt;
+  &lt;div class="navbar-header"&gt;
+  &lt;button type="button" class="navbar-toggle collapsed" data-toggle="collapse" data-target="#bs-example-navbar-collapse-1" aria-expanded="false"&gt;
+    &lt;span class="sr-only"&gt;Toggle navigation&lt;/span&gt;
+    &lt;span class="icon-bar"&gt;&lt;/span&gt;
+    &lt;span class="icon-bar"&gt;&lt;/span&gt;
+    &lt;span class="icon-bar"&gt;&lt;/span&gt;
+  &lt;/button&gt;
+  &lt;a class="navbar-brand" href="/"&gt;Ideator&lt;/a&gt;
+&lt;/div&gt;
 
   &lt;%= yield %&gt;
   
