--- a/app/views/ruby_core_lessons/lessons/lesson_4.html.erb
+++ b/app/views/ruby_core_lessons/lessons/lesson_4.html.erb
@@ -14,6 +14,10 @@
   Given a number, write a method called  <code>square_each_digit</code> to find out the square of each digit of the input. If the input is not a number, the program should return "NaN".
 </p>
 
+<p>
+  For example, <code>3211</code> should turn into <code>9411</code>, <code>654326</code> to <code>3625169436</code>, and <code>"hello"</code> should return <code>"NaN"</code>.
+</p>
+
 <div class="well">
   <h3>Getting Started</h3>
 
