--- a/app/views/instapost_lessons/lessons/lesson_39.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_39.html.erb
@@ -29,4 +29,4 @@
   Once you have finished the tasks labeled Easy, submit your application below to have your code reviewed! Congratulations!
 </p>
 
-<%= @submission_form = true %>
+<% @submission_form = true %>
