--- a/app/views/instapost_lessons/lessons/lesson_39.html.erb
+++ b/app/views/instapost_lessons/lessons/lesson_39.html.erb
@@ -16,9 +16,8 @@
   <li>Easy: Change the site title to: "Share Your Photos Online - Instapost"</li>
   <li>Easy: Add a Favicon</li>
   <li>Easy: Make adjustments to how the site looks</li>
-  <li>Intermediate: Scroll to Load More Photos</li>
-  <li>Advanced: Like Photos Feature</li>
-  <li>Advanced: Follow Users Feature</li>
+  <li>Intermediate - Advanced: Scroll to Load More Photos</li>
+  <li>Intermediate - Advanced: Follow Users Feature</li>
 </ul>
 
 <p>
