--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -16,6 +16,7 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 p {
+  font-family: 'Lato', sans-serif;
   margin-bottom: 15px;
   line-height: 1.5;
   font-size: 18px;
