--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -16,10 +16,10 @@ body {
   -moz-osx-font-smoothing: grayscale;
 }
 p {
-  font-family: 'Lato', sans-serif;
+  font-family: 'Open Sans', sans-serif;
   margin-bottom: 15px;
   line-height: 1.5;
-  font-size: 18px;
+  font-size: 16px;
 }
 a {
   color: #ec6952;
@@ -497,6 +497,7 @@ select {
   margin: 0 auto;
   margin-bottom: 30px;
   font-weight: 500;
+  font-family: 'Titillium Web', sans-serif;
 }
 .promo .btn-cta {
   font-size: 18px;
