--- a/app/assets/stylesheets/styles.css
+++ b/app/assets/stylesheets/styles.css
@@ -11,14 +11,14 @@ body {
   /*font-family: "Open Sans", sans-serif;*/
   font-family: 'Titillium Web', sans-serif;
   color: #444444;
-  font-size: 16px;
+  font-size: 17px;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 p {
-  font-family: 'Open Sans', sans-serif;
+  font-family: 'Lato', sans-serif;
   line-height: 1.5;
-  font-size: 16px;
+  font-size: 17px;
 }
 a {
   color: #ec6952;
