--- a/app/views/static_pages/dashboard.html.erb
+++ b/app/views/static_pages/dashboard.html.erb
@@ -158,7 +158,7 @@
         </ul>
 
         <% if @questions.empty? %>
-          <h3>You haven't asked any questions yet.</h3>
+          <p class="text-center">You haven't asked any questions yet.</p>
         <% else %>
           <h5 class="pull-right"><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View all'.html_safe, questions_path %></h5>
         <% end %>
@@ -184,7 +184,7 @@
         </ul>
 
         <% if @submissions.empty? %>
-          <h3>You don't have any submissions yet.</h3>
+          <p class="text-center">You don't have any submissions yet.</p>
         <% else %>
           <h5 class="pull-right"><%= link_to '<i class="fa fa-caret-right" style="margin-left: 5px;" aria-hidden="true"></i> View all'.html_safe, submissions_path %></h5>
         <% end %>
