--- a/app/views/layouts/_nav_contents.html.erb
+++ b/app/views/layouts/_nav_contents.html.erb
@@ -1,5 +1,5 @@
 <div class="container">
-    <h1 class="logo" style="padding-top: 13px;">
+    <h1 class="logo" style="padding-top: 13px; padding-left: 15px;">
         <a href="/"><span class="text" style="font-size: 40px;color: #EC6952;font-family:'Titillium Web', sans-serif;">TECHRISE</span></a>
     </h1><!--//logo-->
     <nav class="main-nav navbar-right" role="navigation">
